Fixed display of items and spacing

--- a/src/app/components/portfolio/portfolio.component.css
+++ b/src/app/components/portfolio/portfolio.component.css
@@ -9,5 +9,5 @@
 }
 
   .object-fit_cover {
-    object-fit: cover
+    object-fit: contain
   }  
